// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for StandardRighthandCard component renders StandardRighthandCard with title and help button 1`] = `
<WithStyles(RighthandCard)
  help={
    Object {
      "buttonLabel": "OK",
      "text": "Some help text",
      "title": "Help text",
    }
  }
  title="Title"
/>
`;

exports[`Snapshot tests for StandardRighthandCard component renders StandardRighthandCard with title and help button and some content 1`] = `
<WithStyles(RighthandCard)
  help={
    Object {
      "buttonLabel": "OK",
      "text": "Some help text",
      "title": "Help text",
    }
  }
  title="Title"
>
  Some content
</WithStyles(RighthandCard)>
`;

exports[`Snapshot tests for StandardRighthandCard component renders StandardRighthandCard with title and no help icon 1`] = `
<WithStyles(RighthandCard)
  title="card title"
/>
`;
